<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_key_active"
        android:title="@string/pref_title_active" />
    <Preference
        android:key="@string/pref_key_status"
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/status_unknown"
        android:title="@string/pref_title_status" />
    <Preference
        android:key="@string/pref_key_bytesrecv"
        android:persistent="false"
        android:selectable="false"
        android:summary="0"
        android:title="@string/pref_title_bytesrecv" />
    <Preference
        android:key="@string/pref_key_bytessent"
        android:persistent="false"
        android:selectable="false"
        android:summary="0"
        android:title="@string/pref_title_bytessent" />
    <Preference
        android:key="@string/pref_key_bytestotal"
        android:persistent="false"
        android:selectable="false"
        android:summary="0"
        android:title="@string/pref_title_bytestotal" />
    <Preference
        android:key="@string/pref_key_tcpconn"
        android:persistent="false"
        android:selectable="false"
        android:summary="0"
        android:title="@string/pref_title_tcpconn" />
    <Preference
        android:key="@string/pref_key_natsize"
        android:persistent="false"
        android:selectable="false"
        android:summary="0"
        android:title="@string/pref_title_natsize" />
    <Preference
        android:key="@string/pref_key_reset"
        android:persistent="false"
        android:title="@string/pref_title_reset" />
    <PreferenceScreen android:title="@string/pref_title_config">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_tmobile"
            android:summary="@string/pref_desc_tmobile_ms"
            android:title="@string/pref_title_tmobile" />
        <EditTextPreference
            android:defaultValue="1000"
            android:dependency="@string/pref_key_tmobile"
            android:key="@string/pref_key_tmobile_ms"
            android:layout="?android:attr/preferenceLayoutChild"
            android:numeric="integer"
            android:title="@string/pref_title_tmobile_ms" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_autodisconnect"
            android:summary="@string/pref_desc_autodisconnect"
            android:title="@string/pref_title_autodisconnect" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_ping"
            android:summary="@string/pref_desc_ping"
            android:title="@string/pref_title_ping"></CheckBoxPreference>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="@string/pref_key_about"
        android:title="@string/pref_title_about"></PreferenceScreen>

</PreferenceScreen>
