<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_version_tag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="version tag" />

        <TextView
            android:id="@+id/about_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/about_howto" />

        <TextView
            android:id="@+id/about_body"
            android:layout_width="456dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/about_config" />

        <TextView
            android:id="@+id/about_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/about_header_config"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/about_header_notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/about_notes" />

        <TextView
            android:id="@+id/about_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/about_header_notes_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/about_notes_origin" />

        <Button
            android:id="@+id/Return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Ok"></Button>

    </LinearLayout>
</ScrollView>
